// Original file: exa/auto_cascade_common_pb/auto_cascade_common.proto


export interface GitRepoInfo {
  'repoName'?: (string);
  'branch'?: (string);
  'commit'?: (string);
  'prUrl'?: (string);
}

export interface GitRepoInfo__Output {
  'repoName': (string);
  'branch': (string);
  'commit': (string);
  'prUrl': (string);
}
