// Original file: exa/auto_cascade_common_pb/auto_cascade_common.proto

export const GithubPullRequestBranchStatus = {
  GITHUB_PULL_REQUEST_BRANCH_STATUS_UNSPECIFIED: 'GITHUB_PULL_REQUEST_BRANCH_STATUS_UNSPECIFIED',
  GITHUB_PULL_REQUEST_BRANCH_STATUS_OPEN: 'GITHUB_PULL_REQUEST_BRANCH_STATUS_OPEN',
  GITHUB_PULL_REQUEST_BRANCH_STATUS_CLOSED: 'GITHUB_PULL_REQUEST_BRANCH_STATUS_CLOSED',
  GITHUB_PULL_REQUEST_BRANCH_STATUS_DRAFT: 'GITHUB_PULL_REQUEST_BRANCH_STATUS_DRAFT',
  GITHUB_PULL_REQUEST_BRANCH_STATUS_MERGED: 'GITHUB_PULL_REQUEST_BRANCH_STATUS_MERGED',
} as const;

export type GithubPullRequestBranchStatus =
  | 'GITHUB_PULL_REQUEST_BRANCH_STATUS_UNSPECIFIED'
  | 0
  | 'GITHUB_PULL_REQUEST_BRANCH_STATUS_OPEN'
  | 1
  | 'GITHUB_PULL_REQUEST_BRANCH_STATUS_CLOSED'
  | 2
  | 'GITHUB_PULL_REQUEST_BRANCH_STATUS_DRAFT'
  | 3
  | 'GITHUB_PULL_REQUEST_BRANCH_STATUS_MERGED'
  | 4

export type GithubPullRequestBranchStatus__Output = typeof GithubPullRequestBranchStatus[keyof typeof GithubPullRequestBranchStatus]
